# TeslaUI

./: CMakeLists.txt  Main.qml  README.md  main.cpp
BottomBar/: BottomBar.qml  IndoorTemperature.qml  Volume.qml
LeftScreen/: LeftScreen.qml
RightScreen/: NavigationSearchBox.qml  RightScreen.qml
controllers/: indoortemperature.cpp  indoortemperature.h  system.cpp  system.h  volume.cpp  volume.h
